client/stylesheets/all.less
@charset "utf-8";

@import "_variables";

html {
  -webkit-font-smoothing: antialiased;
}

div#rb-heart-container {
  width: 270px;
  height: 300px;

  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;

  margin: auto;
}

path#outer-heart { display: none; }
path#inner-heart { display: none; }

body {
  font-family: 'Lato', Helvetica, Arial, sans-serif;
  color: @body-text-color;
  font-weight: 400;
  font-size: 1.1em;
}

h1, h2, h3, h4, h5, h6, h7, p {
  font-size: 1em;
  line-height: 1.75em;
  padding: 0;
  margin: 0 0 1em 0;
}

div.browser-warning {
  padding: 10px;
  background-color: #cecece;
}

a {
  text-decoration: none;
  color: @red-heart-color
}

a:visited {
  color: @red-heart-color;
}

a:hover {
  cursor: hand;
  color: @red-heart-color;
  text-decoration: underline;
}

section h4 {
  font-size: 1.2em;
  font-weight: 600;
}

header {
  text-align: center;
  font-size: 1.5em;
  line-height: 1.5em;
  font-weight: 600;
  border-bottom: 1px solid @red-heart-color;
}

header #title {
  text-align: left;
  float: left;
}

header #date {
  font-weight: 400;
  float: right;
}

section#desktop-nav {
  text-align: center;
}

section#desktop-nav ul li {
  width: 200px;
  display:inline-block;
}

div.section-header {
  margin: 20px 0;
}

h3.title {
  margin: 0;
  line-height: 1em;
  font-size: 2em;
  font-weight: 400;
}

h5.sub-title {
  margin: 0;
  font-size:1.2em;
  font-weight: 400;
}

#ceremony p, #ceremony h3 {
  margin: 0;
}

div.card h3.activity {
  font-size: 1.4em;
  font-weight: 600;
}

section.hero {
  background-color: rgb(255, 255, 255);
  color: rgb(74, 82, 90);
  background: url(/images/cover.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: 75% top;
  border-bottom: 1px solid @red-heart-color;
  height: 500px;
  width: 100%;
}

#accommodations h1 {
  font-size: 1.2em;
  font-weight: 600;
  margin: 0;
}

#accommodations div.hotel-title {
  margin-bottom: 20px;
}

#accommodations ul {
  margin-left: 30px;
  list-style-type: square;
}

#h-container {
  overflow: auto;
  width: 100%
}

div#registry-options {
  text-align: center;
  height: 60px;
  line-height: 60px;
}

div.split {
  height: 2px;
  margin: 10px 0px;
  border-bottom: 2px dotted #cecece;
}

footer {
  color: #aaa;
  text-align: center;
  margin-bottom: 20px;
}

.colorize {
  padding: 0 5px;
  color: @red-heart-color;
  text-shadow: 2px 2px 0px @text-shadow-color;
}

.hidden {
  display: none;
}

.error {
  color: red;
  font-style: bold;
}

.relative {
  position: relative;
}

img.registry-logo { width: 300px; vertical-align: middle; }

input {
  border-radius: 5px;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
}

input.text {
  border: 2px solid #aaa;
  font-size: 20px;
  padding: 10px;
  width: 100%;
  color: #22313d;
  /* overflows without next two properties */
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

input.submit {
  border: 0;
  width: 100%;
  padding: 10px 5px;
  background: @red-heart-color;
  text-align: center;
  color: white;
  font-weight: bold;
}

div.logo {
  height: 80px;
}

#menu-toggle {
  display: none;
  padding: 8px 12px;
  float: right;
  position: relative;
  top: 10px;
  position: absolute;
  top: -51px;
  right: 12px;
}

.icon {
  height: 32px;
  width: 32px;
  fill: #858484;
}

.isChecked {
  border-style: solid;
  border: 1px solid @red-heart-color;
  border-bottom: none;
  background-color: rgb(253, 243, 248);
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
}

#mobile-nav-items {
  background-color: rgb(253, 243, 248);
  display: none;
  border-bottom: 1px solid @red-heart-color;
}

#mobile-nav-items li {
  height: 40px;
  line-height: 40px;
}

#mobile-nav-items li a {
  display: block;
}

#scrollTop {
  position: fixed;
  right: 12px;
  top: 12px;
  display: none;
  font-weight: bold;
  width: 40px;
  height: 40px;
  text-align: center;
  text-decoration: none;
}

@media only screen
  and (max-width : 480px) {

    section.hero { height: 260px; }

    header #date {
      font-size: .8em; font-weight: 300;
      float: none;
      text-align: left;
      line-height: 1em;
    }

    header #title {
      float: none;
      line-height: 1em;
    }

    header {
      line-height: .5em;
    }
    #desktop-nav { display: none !important; }

    #menu-toggle { display: block; }
}

@media only screen
  and (max-width : 568px) {
    section.hero { height: 260px; }
    header #date {
      line-height: 1em;
      font-size: .8em; font-weight: 300;
      float: none;
    }

    header #title {
      float: none;
      line-height: 1em;
    }


    #header-info { float: left; }

    header {
      line-height: .5em;
    }

    #desktop-nav { display: none !important; }
    img.registry-logo { width: 200px; }

    #menu-toggle { display: block; }
}

@media only screen
  and (max-width : 1024px) {
    section.hero { height: 380px; }

    header #date {
      float: none;
    }

    header #title {
      float: none;
    }

    #desktop-nav { display: none !important; }

    #menu-toggle { display: block; }
    #header-info { float: left; }
}

@media only screen
  and (min-width : 1025px) {

  #scrollTop {
    display: none !important;
  }

}

